--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "type": "module",
   "private": true,
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "vitest": "^4.0.15"
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "date-fns": "^4.1.0",
+    "effect": "^3.19.11"
   }
 }
